# protosync

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md
include/: ads1050.h  logger.hpp  midi.hpp  ui.hpp
protosync-hardware/: #auto_saved_files#  _autosave-clock.kicad_sch  _autosave-midi.kicad_sch  _autosave-pot-adc.kicad_sch  _autosave-protosync.kicad_sch  _autosave-screen-gpio.kicad_sch  buttons.kicad_sch  clock.kicad_sch  desktop.ini  eeprom.kicad_sch  fp-info-cache  midi.kicad_sch  midi.kicad_sch-bak  pot-adc.kicad_sch  pot-adc.kicad_sch-bak  protosync-v2.kicad_pcb  protosync-v2.kicad_prl  protosync-v2.kicad_pro  protosync.kicad_pcb  protosync.kicad_prl  protosync.kicad_pro  protosync.kicad_sch  protosync_copy.kicad_pcb  protosync_copy.kicad_pro  protosync_with_teardrops-B_Cu.gbl  protosync_with_teardrops-B_Silkscreen.gbo  protosync_with_teardrops-F_Cu.gtl  protosync_with_teardrops-F_Silkscreen.gto  protosync_with_teardrops.kicad_pcb  protosync_with_teardrops.kicad_prl  protosync_with_teardrops.kicad_pro  screen-gpio.kicad_sch  ~protosync.kicad_sch.lck
protosync-hardware/3d-library.3dshapes/: SW_Hotswap_Kailh_Choc_V1.wrl  SW_Hotswap_Kailh_MX.stp  SW_Hotswap_Kailh_MX.wrl  SW_Kailh_Choc_V1.wrl  Stabilizer_Cherry_MX_2.00u.stp  Stabilizer_Cherry_MX_2.00u.wrl  Stabilizer_Cherry_MX_3.00u.stp  Stabilizer_Cherry_MX_3.00u.wrl  Stabilizer_Cherry_MX_6.00u.stp  Stabilizer_Cherry_MX_6.00u.wrl  Stabilizer_Cherry_MX_6.25u.stp  Stabilizer_Cherry_MX_6.25u.wrl  Stabilizer_Cherry_MX_7.00u.stp  Stabilizer_Cherry_MX_7.00u.wrl  Stabilizer_Cherry_MX_8.00u.stp  Stabilizer_Cherry_MX_8.00u.wrl
protosync-hardware/footprints_global.pretty/: ACJM-MHOM.kicad_mod  ACJS-MHDEM.kicad_mod  ACJSMHOM.kicad_mod  CUI_PJ-082BH.kicad_mod  RV112FF.kicad_mod  RV142FPF.kicad_mod  SW_Cherry_MX_PCB.kicad_mod  Waveshare_2inch_LCD Module.kicad_mod
protosync-hardware/gerbers/: protosync-B_Cu.gbl  protosync-B_Mask.gbs  protosync-B_Paste.gbp  protosync-B_Silkscreen.gbo  protosync-Edge_Cuts.gm1  protosync-F_Cu.gtl  protosync-F_Mask.gts  protosync-F_Paste.gtp  protosync-F_Silkscreen.gto  protosync-Margin.gbr  protosync-NPTH-drl_map.ps  protosync-NPTH.drl  protosync-PTH-drl_map.ps  protosync-PTH.drl  protosync-User_Drawings.gbr
protosync-hardware/gerbers-v2/: protosync-B_Cu.gbl  protosync-B_Mask.gbs  protosync-B_Paste.gbp  protosync-B_Silkscreen.gbo  protosync-Edge_Cuts.gm1  protosync-F_Cu.gtl  protosync-F_Mask.gts  protosync-F_Paste.gtp  protosync-F_Silkscreen.gto  protosync-NPTH-drl_map.gbr  protosync-NPTH.drl  protosync-PTH-drl_map.gbr  protosync-PTH.drl
protosync-hardware/gerbers-v3/: protosync-B_Cu.gbl  protosync-B_Mask.gbs  protosync-B_Paste.gbp  protosync-B_Silkscreen.gbo  protosync-Edge_Cuts.gm1  protosync-F_Cu.gtl  protosync-F_Mask.gts  protosync-F_Paste.gtp  protosync-F_Silkscreen.gto  protosync-NPTH-drl_map.gbr  protosync-NPTH.drl  protosync-PTH-drl_map.gbr  protosync-PTH.drl
protosync-hardware/modele-zip/: 1979.stp  1992.stp  2inch240x320.step  (+18 more)
scripts/: rt_stress_test.sh  test_buttons.py  to_excel.py
src/: ads1050.cpp  logger.cpp  main.cpp  midi.cpp  ui.cpp
(+515 files in other folders)
